# wallerd

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md
shaders/constant/default/: fragment.glsl
shaders/constant/highlight/: fragment.glsl
shaders/constant/retrowave/: fragment.glsl
shaders/constant/vhs/: fragment.glsl
shaders/transition/dot_matrix_diagonal/: fragment.glsl  vertex.glsl
shaders/transition/fade/: fragment.glsl
shaders/transition/hex_grid/: fragment.glsl
shaders/transition/pixel/: fragment.glsl
shaders/transition/zoom_blur/: fragment.glsl
src/: lib.rs  socket.rs
src/config/: parser.rs
src/daemon/: app.rs  commands.rs  egl_window.rs  ipc.rs  ipc_responses.rs  mod.rs  renderer.rs  wallpaper.rs
src/daemon/views/: interval_view.rs  mod.rs  static_view.rs  time_view.rs
