[package]
name = "wallerd"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true


[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
calloop = "0.14.4"
libc = "0.2"
calloop-wayland-source = "0.4"
raw-window-handle = "0.6"
khronos-egl = { version = "6", features = ["dynamic"] }
glow = "0.14"
env_logger = "0.11.10"
image = { version = "0.25", default-features = false, features = ["png", "webp", "jpeg", "bmp"] }
log = "0.4.29"
smithay-client-toolkit = "0.20.0"
winit = "0.30.13"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
serde_json = "1"
